grammar.js
    source_file: ($) =>
      seq(
        optional($.shebang),
        repeat($.file_annotation),
        optional($.package_header),
        repeat($.import),
        repeat(seq($.statement, $._semi))
      ),

    import: ($) =>
      seq('import', $.qualified_identifier, optional(choice(seq('.', '*'), seq('as', $.identifier))), optional(';')),

    class_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          choice('class', seq(optional('fun'), 'interface')),
          field('name', $.identifier),
          optional($.type_parameters),
          optional($.primary_constructor),
          optional(seq(':', $.delegation_specifiers)),
          optional($.type_constraints),
          optional(choice($.class_body, $.enum_class_body))
        )
      ),

    object_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          'object',
          field('name', $.identifier),
          optional(seq(':', $.delegation_specifiers)),
          optional($.class_body)
        )
      ),

    property_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          choice('val', 'var'),
          optional($.type_parameters),
          optional(seq($._receiver_type, optional('.'))),
          choice($.variable_declaration, $.multi_variable_declaration),
          optional($.type_constraints),
          optional(choice(seq('=', $.expression), $.property_delegate)),
          optional(';'),
          optional(choice(seq($.getter, optional($.setter)), seq($.setter, optional($.getter))))
        )
      ),

    companion_object: ($) =>
      seq(
        optional($.modifiers),
        'companion',
        'object',
        optional(field('name', $.identifier)),
        optional(seq(':', $.delegation_specifiers)),
        optional($.class_body)
      ),

    anonymous_initializer: ($) => seq('init', $.block),

    type_parameters: ($) => seq('<', commaSep1($.type_parameter), '>'),

    type_parameter: ($) => seq(optional($.type_parameter_modifiers), $.identifier, optional(seq(':', $.type))),

    primary_constructor: ($) => seq(optional(seq(optional($.modifiers), 'constructor')), $.class_parameters),

    class_parameters: ($) => seq('(', optionalCommaSep1($.class_parameter), ')'),

    class_parameter: ($) =>
      seq(
        optional($.modifiers),
        optional(choice('val', 'var')),
        $._identifier,
        ':',
        $.type,
        optional(seq('=', $.expression))
      ),

    constructor_invocation: ($) => seq($.type, $.value_arguments),

    function_declaration: ($) =>
      prec.right(
        1,
        seq(
          optional($.modifiers),
          'fun',
          optional($.type_parameters),
          optional(seq($._receiver_type, optional('.'))),
          field('name', $._identifier),
          $.function_value_parameters,
          optional(seq(':', $.type)),
          optional($.type_constraints),
          optional($.function_body)
        )
      ),

    function_value_parameters: ($) =>
      seq(
        '(',
        optionalCommaSep1(seq(optional($.parameter_modifiers), $.parameter, optional(seq('=', $.expression)))),
        ')'
      ),

    parameter: ($) => seq($._identifier, ':', $.type),

    delegation_specifiers: ($) => commaSep1($.delegation_specifier),

    delegation_specifier: ($) =>
      prec.right(seq(repeat($.annotation), choice($.constructor_invocation, $.explicit_delegation, $.type))),

    variable_declaration: ($) => prec(1, seq(repeat($.annotation), $._identifier, optional(seq(':', $.type)))),

    explicit_delegation: ($) => seq($.type, 'by', $.primary_expression),

    getter: ($) =>
      prec.right(
        seq(optional($.modifiers), 'get', optional(seq('(', ')', optional(seq(':', $.type)), $.function_body)))
      ),

    setter: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          'set',
          optional(
            seq(
              '(',
              optional($.parameter_modifiers),
              $.identifier,
              optional(seq(':', $.type)),
              optional(seq('=', $.expression)),
              ')',
              optional(seq(':', $.type)),
              $.function_body
            )
          )
        )
      ),

    function_body: ($) => choice($.block, seq('=', $.expression)),

    block: ($) => seq('{', optional($._statements), '}'),

    for_statement: ($) =>
      prec.right(
        seq(
          optional($._loop_annotations),
          optional($.label),
          'for',
          '(',
          repeat($.annotation),
          choice($.variable_declaration, $.multi_variable_declaration),
          'in',
          $.expression,
          ')',
          optional(field('body', choice($.block, $.statement)))
        )
      ),

    while_statement: ($) =>
      prec.right(
        seq(
          optional($._loop_annotations),
          optional($.label),
          'while',
          '(',
          field('condition', $.expression),
          ')',
          optional(choice(field('body', choice($.block, $.statement)), ';'))
        )
      ),

    do_while_statement: ($) =>
      prec.right(
        seq(
          optional($._loop_annotations),
          optional($.label),
          'do',
          optional(choice(field('body', choice($.block, $.statement)), ';')),
          'while',
          '(',
          field('condition', $.expression),
          ')'
        )
      ),

    _loop_annotations: ($) => repeat1($.annotation),

    class_body: ($) => seq('{', repeat(seq($.class_member_declaration, $._class_member_semi)), '}'),

    enum_class_body: ($) =>
      seq(
        '{',
        optionalCommaSep1($.enum_entry),
        optional(seq(';', repeat(seq($.class_member_declaration, $._class_member_semi)))),
        '}'
      ),

    enum_entry: ($) => seq(optional($.modifiers), $.identifier, optional($.value_arguments), optional($.class_body)),

    value_arguments: ($) => seq('(', optionalCommaSep1($.value_argument), ')'),

    value_argument: ($) => seq(optional(seq($._identifier, '=')), optional('*'), $.expression),

    _statements: ($) => seq($.statement, repeat(seq($._semi, $.statement)), optional($._semi)),

    modifiers: ($) =>
      prec.right(
        repeat1(
          choice(
            $.annotation,
            $.class_modifier,
            $.member_modifier,
            $.function_modifier,
            $.property_modifier,
            $.visibility_modifier,
            $.inheritance_modifier,
            $.parameter_modifier,
            $.platform_modifier
          )
        )
      ),

    class_modifier: () => choice('enum', 'sealed', 'annotation', 'data', 'inner', 'value'),

    function_modifier: () => prec.right(choice('tailrec', 'operator', 'infix', 'inline', 'external', 'suspend')),

    visibility_modifier: () => choice('public', 'private', 'protected', 'internal'),

    inheritance_modifier: () => choice('abstract', 'final', 'open'),

    member_modifier: () => choice('override', 'lateinit'),

    parameter_modifiers: ($) => repeat1(choice($.annotation, $.parameter_modifier)),

    type_modifiers: ($) => prec.right(repeat1(choice($.annotation, 'suspend'))),

    annotation: ($) =>
      choice(
        seq('@', optional($.use_site_target), $._unescaped_annotation),
        seq('@', optional($.use_site_target), '[', repeat1($._unescaped_annotation), ']')
      ),

    _unescaped_annotation: ($) => choice($.constructor_invocation, $.type),

    user_type: ($) => seq(optional($.type_modifiers), sep1($._simple_user_type, '.')),

    _simple_user_type: ($) => prec.right(seq($._identifier, optional($.type_arguments))),

    _receiver_type: ($) =>
      seq(optional($.type_modifiers), choice($.user_type, 'dynamic', $.parenthesized_type, $.nullable_type)),

    type_arguments: ($) => seq('<', commaSep1($.type_projection), '>'),

    type_projection: ($) => choice(seq(repeat($.variance_modifier), $.type), '*'),

    function_type: ($) =>
      seq(optional($.type_modifiers), optional(seq($._receiver_type, '.')), $.function_type_parameters, '->', $.type),

    function_type_parameters: ($) => seq('(', optionalCommaSep1(choice($.parameter, $.type)), ')'),

    assignment: ($) =>
      seq(
        field('left', $.expression),
        field('operator', choice('=', '+=', '-=', '*=', '/=', '%=')),
        field('right', $.expression)
      ),

    binary_expression: ($) => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['!=', PREC.EQUAL],
        ['!==', PREC.EQUAL],
        ['==', PREC.EQUAL],
        ['===', PREC.EQUAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['?:', PREC.ELVIS],
      ];

      return choice(
        ...table.map(([operator, precedence]) => {
          return prec.left(
            precedence,
            seq(
              field('left', $.expression),
              // @ts-ignore
              field('operator', operator),
              field('right', $.expression)
            )
          );
        })
      );
    },

    range_expression: ($) => prec.left(PREC.RANGE, seq($.expression, choice('..', '..<'), $.expression)),

    infix_expression: ($) => prec.left(PREC.INFIX, seq($.expression, $.identifier, $.expression)),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          $.expression,
          optional($.type_arguments),
          choice($.value_arguments, seq(optional($.value_arguments), $.annotated_lambda))
        )
      ),

    annotated_lambda: ($) => seq(repeat($.annotation), optional($.label), $.lambda_literal),

    lambda_literal: ($) =>
      seq('{', optional(seq(optional($.lambda_parameters), '->')), optionalSep1($.statement, $._semi), '}'),

    anonymous_function: ($) =>
      prec.right(
        seq(
          'fun',
          optional(seq($.type, '.')),
          $.function_value_parameters,
          optional(seq(':', $.type)),
          optional($.type_constraints),
          optional($.function_body)
        )
      ),

    index_expression: ($) => prec(PREC.CALL, seq($.expression, '[', commaSep($.expression), ']')),

    this_expression: ($) => seq(choice('this', seq('this@', $.identifier))),

    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          '(',
          field('condition', $.expression),
          ')',
          choice(
            field('consequence', choice($.block, $.expression, $.assignment)),
            ';',
            seq(
              optional(field('consequence', choice($.block, $.expression, $.assignment))),
              optional(';'),
              'else',
              choice(field('alternative', choice($.block, $.expression, $.assignment)), ';')
            )
          )
        )
      ),

    parenthesized_expression: ($) => seq('(', $.expression, ')'),

    collection_literal: ($) => seq('[', commaSep1($.expression), optional(','), ']'),

    when_expression: ($) => seq('when', optional($.when_subject), '{', repeat($.when_entry), '}'),

    when_subject: ($) =>
      seq('(', optional(seq(repeat($.annotation), 'val', $.variable_declaration, '=')), $.expression, ')'),

    when_entry: ($) =>
      seq(
        choice(seq(commaSep1(field('condition', $._when_condition)), optional(',')), 'else'),
        '->',
        field('body', choice($.block, $.statement)),
        optional($._semi)
      ),

    _when_condition: ($) => choice($.expression, $.range_test, $.type_test),

    try_expression: ($) =>
      seq('try', $.block, choice(seq(repeat1($.catch_block), optional($.finally_block)), $.finally_block)),

    catch_block: ($) => seq('catch', '(', repeat($.annotation), $.identifier, ':', $.type, ')', $.block),

    break_expression: ($) => choice('break', seq('break@', field('label', $.identifier))),

    navigation_expression: ($) =>
      prec(
        PREC.CALL,
        choice(
          seq($.expression, choice('.', alias($._q_dot, '?.')), $.identifier),
          seq($.expression, '::', choice($.identifier, 'class'))
        )
      ),

    object_literal: ($) => seq('object', optional(seq(':', $.delegation_specifiers)), $.class_body),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias(
              choice(token.immediate(prec(2, seq('\\', /[^bnrt'"\\$]/))), token.immediate(prec(1, /[^"\\$]+/)), '$'),
              $.string_content
            ),
            $.escape_sequence,
            $.interpolation
          )
        ),
        '"'
      ),

    number_literal: () => {
      const separator = '_';
      const decimal = /[0-9]+/;
      const hex = /[0-9a-fA-F]/;
      const bin = /[01]/;
      const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const binDigits = seq(repeat1(bin), repeat(seq(separator, repeat1(bin))));

      return token(
        seq(choice(decimalDigits, seq(/0[xX]/, hexDigits), seq(/0[bB]/, binDigits)), optional(/([lL]|[uU][lL]?)/))
      );
    },

    qualified_identifier: ($) => seq($.identifier, repeat(seq('.', $.identifier))),

    label: () => token(/[a-zA-Z_][a-zA-Z_0-9]*@/),

    _identifier: ($) => choice($.identifier, $._reserved_identifier),

    identifier: () => token(choice(/[\p{L}_][\p{L}_\p{Nd}]*/u, /`[^\r\n`]+`/)),

    line_comment: () => token(seq('//', /.*/)),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by `separator`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by `separator`
 * and optionally ending with `separator`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {ChoiceRule}
 */
function optionalSep1(rule, separator) {
  return optional(seq(rule, repeat(seq(separator, rule)), optional(separator)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 * and optionally ending with a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function optionalCommaSep1(rule) {
  return optional(seq(rule, repeat(seq(',', rule)), optional(',')));
}
