test/corpus/declarations.txt
==============================
Imports
==============================

import foo.bar
import foo.baz.*
import foo import bar

---

(source_file
  (import
    (qualified_identifier
      (identifier)
      (identifier)))
  (import
    (qualified_identifier
      (identifier)
      (identifier)))
  (import
    (qualified_identifier
      (identifier)))
  (import
    (qualified_identifier
      (identifier))))

==============================
Loops
==============================

fun Foo() {
  loop@ for (i in 0..10) {
    println(i)
    if (i == 5) {
      break@loop
    }
  }

  while (true) {
    println("Hello")
    break
  }

  do {
    println("World")
    break
  } while (true)
}

---

(source_file
  (function_declaration
    (identifier)
    (function_value_parameters)
    (function_body
      (block
        (for_statement
          (label)
          (variable_declaration
            (identifier))
          (range_expression
            (number_literal)
            (number_literal))
          (block
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (identifier))))
            (if_expression
              (binary_expression
                (identifier)
                (number_literal))
              (block
                (break_expression
                  (identifier))))))
        (while_statement
          (identifier)
          (block
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (string_literal
                    (string_content)))))
            (break_expression)))
        (do_while_statement
          (block
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (string_literal
                    (string_content)))))
            (break_expression))
          (identifier))))))

==============================
Modifiers
==============================

internal class Test(X: Int): Y(X) {
  abstract inline fun test()

  protected open fun test2() {
    println("Hello")
  }

  public fun test3() {
    println("World")
  }

  tailrec suspend fun test4() {
    println("!")
  }
}

public object Test2 {
  private companion object {
    fun test() {
      println("Hello")
    }
  }
}

---

(source_file
  (class_declaration
    (modifiers
      (visibility_modifier))
    (identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          (identifier)
          (user_type
            (identifier)))))
    (delegation_specifiers
      (delegation_specifier
        (constructor_invocation
          (user_type
            (identifier))
          (value_arguments
            (value_argument
              (identifier))))))
    (class_body
      (function_declaration
        (modifiers
          (inheritance_modifier)
          (function_modifier))
        (identifier)
        (function_value_parameters))
      (function_declaration
        (modifiers
          (visibility_modifier)
          (inheritance_modifier))
        (identifier)
        (function_value_parameters)
        (function_body
          (block
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (string_literal
                    (string_content))))))))
      (function_declaration
        (modifiers
          (visibility_modifier))
        (identifier)
        (function_value_parameters)
        (function_body
          (block
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (string_literal
                    (string_content))))))))
      (function_declaration
        (modifiers
          (function_modifier)
          (function_modifier))
        (identifier)
        (function_value_parameters)
        (function_body
          (block
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (string_literal
                    (string_content))))))))))
  (object_declaration
    (modifiers
      (visibility_modifier))
    (identifier)
    (class_body
      (companion_object
        (modifiers
          (visibility_modifier))
        (class_body
          (function_declaration
            (identifier)
            (function_value_parameters)
            (function_body
              (block
                (call_expression
                  (identifier)
                  (value_arguments
                    (value_argument
                      (string_literal
                        (string_content)))))))))))))

===============
Enum Classes
===============

enum class Color {
  RED, GREEN, BLUE;

  override fun rgb() = when (this) {
    RED -> 0xFF0000
    GREEN -> 0x00FF00
    BLUE -> 0x0000FF
  }
}

enum class Color2(val rgb: Int) {
  RED(0xFF0000), GREEN(0x00FF00), BLUE(0x0000FF);

  fun rgb() = rgb
}

---

(source_file
  (class_declaration
    (modifiers
      (class_modifier))
    (identifier)
    (enum_class_body
      (enum_entry
        (identifier))
      (enum_entry
        (identifier))
      (enum_entry
        (identifier))
      (function_declaration
        (modifiers
          (member_modifier))
        (identifier)
        (function_value_parameters)
        (function_body
          (when_expression
            (when_subject
              (this_expression))
            (when_entry
              (identifier)
              (number_literal))
            (when_entry
              (identifier)
              (number_literal))
            (when_entry
              (identifier)
              (number_literal)))))))
  (class_declaration
    (modifiers
      (class_modifier))
    (identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          (identifier)
          (user_type
            (identifier)))))
    (enum_class_body
      (enum_entry
        (identifier)
        (value_arguments
          (value_argument
            (number_literal))))
      (enum_entry
        (identifier)
        (value_arguments
          (value_argument
            (number_literal))))
      (enum_entry
        (identifier)
        (value_arguments
          (value_argument
            (number_literal))))
      (function_declaration
        (identifier)
        (function_value_parameters)
        (function_body
          (identifier))))))

==============================
Class bodies after delegations to expressions
==============================

class A : B by b {
  val x get() = 1
}

class C(d: D) : B by D.create(d), E by e.f<G>() {
  fun g() = 1
}

val h = object : B by i(j { 1 }) {
  val k = 2
}

class L : B by m[0]
class N : B by (o)
{
}

---

(source_file
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (identifier))))
    (class_body
      (property_declaration
        (variable_declaration
          (identifier))
        (getter
          (function_body
            (number_literal))))))
  (class_declaration
    (identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          (identifier)
          (user_type
            (identifier)))))
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (call_expression
            (navigation_expression
              (identifier)
              (identifier))
            (value_arguments
              (value_argument
                (identifier))))))
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (call_expression
            (navigation_expression
              (identifier)
              (identifier))
            (type_arguments
              (type_projection
                (user_type
                  (identifier))))
            (value_arguments)))))
    (class_body
      (function_declaration
        (identifier)
        (function_value_parameters)
        (function_body
          (number_literal)))))
  (property_declaration
    (variable_declaration
      (identifier))
    (object_literal
      (delegation_specifiers
        (delegation_specifier
          (explicit_delegation
            (user_type
              (identifier))
            (call_expression
              (identifier)
              (value_arguments
                (value_argument
                  (call_expression
                    (identifier)
                    (annotated_lambda
                      (lambda_literal
                        (number_literal))))))))))
      (class_body
        (property_declaration
          (variable_declaration
            (identifier))
          (number_literal)))))
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (index_expression
            (identifier)
            (number_literal))))))
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (parenthesized_expression
            (identifier)))))
    (class_body)))

==============================
Class bodies after delegations to operator expressions
==============================

class A : B by c ?: d {
  val z = 1
}

class E : B by if (c) a else b {
  val z = 1
}

class F : B by a + b.c(1) {
  val z = 1
}

class G : () -> Unit by fun() {
  println()
} {
  val z = 1
}

val o = object : B by Foo.create() {
  val z = 2
}

---

(source_file
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (binary_expression
            (identifier)
            (identifier)))))
    (class_body
      (property_declaration
        (variable_declaration
          (identifier))
        (number_literal))))
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (if_expression
            (identifier)
            (identifier)
            (identifier)))))
    (class_body
      (property_declaration
        (variable_declaration
          (identifier))
        (number_literal))))
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (user_type
            (identifier))
          (binary_expression
            (identifier)
            (call_expression
              (navigation_expression
                (identifier)
                (identifier))
              (value_arguments
                (value_argument
                  (number_literal))))))))
    (class_body
      (property_declaration
        (variable_declaration
          (identifier))
        (number_literal))))
  (class_declaration
    (identifier)
    (delegation_specifiers
      (delegation_specifier
        (explicit_delegation
          (function_type
            (function_type_parameters)
            (user_type
              (identifier)))
          (anonymous_function
            (function_value_parameters)
            (function_body
              (block
                (call_expression
                  (identifier)
                  (value_arguments))))))))
    (class_body
      (property_declaration
        (variable_declaration
          (identifier))
        (number_literal))))
  (property_declaration
    (variable_declaration
      (identifier))
    (object_literal
      (delegation_specifiers
        (delegation_specifier
          (explicit_delegation
            (user_type
              (identifier))
            (call_expression
              (navigation_expression
                (identifier)
                (identifier))
              (value_arguments)))))
      (class_body
        (property_declaration
          (variable_declaration
            (identifier))
          (number_literal))))))

==============================
Annotations with arguments before top-level declarations
==============================

@A(b)
fun f() {}
fun g() {}

@Throws(IOException::class) fun h() = 1

@RunWith(R::class)
@Config(sdk = [30])
class C {
  fun i() {}
}

val x = 1

---

(source_file
  (function_declaration
    (modifiers
      (annotation
        (constructor_invocation
          (user_type
            (identifier))
          (value_arguments
            (value_argument
              (identifier))))))
    (identifier)
    (function_value_parameters)
    (function_body
      (block)))
  (function_declaration
    (identifier)
    (function_value_parameters)
    (function_body
      (block)))
  (function_declaration
    (modifiers
      (annotation
        (constructor_invocation
          (user_type
            (identifier))
          (value_arguments
            (value_argument
              (navigation_expression
                (identifier)))))))
    (identifier)
    (function_value_parameters)
    (function_body
      (number_literal)))
  (class_declaration
    (modifiers
      (annotation
        (constructor_invocation
          (user_type
            (identifier))
          (value_arguments
            (value_argument
              (navigation_expression
                (identifier))))))
      (annotation
        (constructor_invocation
          (user_type
            (identifier))
          (value_arguments
            (value_argument
              (identifier)
              (collection_literal
                (number_literal)))))))
    (identifier)
    (class_body
      (function_declaration
        (identifier)
        (function_value_parameters)
        (function_body
          (block)))))
  (property_declaration
    (variable_declaration
      (identifier))
    (number_literal)))

==============================
Trailing commas and an empty collection literal
==============================

class A<T, U,>(x: Map<T, U,>) {
  var p = 1
    set(value,) { field = value }
  fun f() {
    a[1, 2,]
    val e = []
    try { } catch (e: E,) { }
  }
}
@Ann(xs = [])
fun g() = 1

---

(source_file
  (class_declaration
    (identifier)
    (type_parameters
      (type_parameter
        (identifier))
      (type_parameter
        (identifier)))
    (primary_constructor
      (class_parameters
        (class_parameter
          (identifier)
          (user_type
            (identifier)
            (type_arguments
              (type_projection
                (user_type
                  (identifier)))
              (type_projection
                (user_type
                  (identifier))))))))
    (class_body
      (property_declaration
        (variable_declaration
          (identifier))
        (number_literal)
        (setter
          (identifier)
          (function_body
            (block
              (assignment
                (identifier)
                (identifier))))))
      (function_declaration
        (identifier)
        (function_value_parameters)
        (function_body
          (block
            (index_expression
              (identifier)
              (number_literal)
              (number_literal))
            (property_declaration
              (variable_declaration
                (identifier))
              (collection_literal))
            (try_expression
              (block)
              (catch_block
                (identifier)
                (user_type
                  (identifier))
                (block))))))))
  (function_declaration
    (modifiers
      (annotation
        (constructor_invocation
          (user_type
            (identifier))
          (value_arguments
            (value_argument
              (identifier)
              (collection_literal))))))
    (identifier)
    (function_value_parameters)
    (function_body
      (number_literal))))

==============================
Context parameters and context receivers
==============================

context(scope: CoroutineScope)
private suspend fun f() = 1

context(_: Foo, b: Bar,) fun g() {}

context(Foo)
val Bar.x: Int get() = 1

context(@Annotated users: UserRepository, @A Foo) fun h() = users

private
context(a: A) @Ann
internal fun i() = 1

val m = context(a: A) fun () {}

fun j(block: context(C) () -> Unit, k: suspend context(C) () -> Unit, l: @A context(C) () -> Unit) {
  context(x: Foo) fun local() {}
}


---

(source_file
  (function_declaration
    (modifiers
      (context_parameters
        (parameter
          (identifier)
          (user_type
            (identifier))))
      (visibility_modifier)
      (function_modifier))
    (identifier)
    (function_value_parameters)
    (function_body
      (number_literal)))
  (function_declaration
    (modifiers
      (context_parameters
        (parameter
          (identifier)
          (user_type
            (identifier)))
        (parameter
          (identifier)
          (user_type
            (identifier)))))
    (identifier)
    (function_value_parameters)
    (function_body
      (block)))
  (property_declaration
    (modifiers
      (context_parameters
        (user_type
          (identifier))))
    (user_type
      (identifier))
    (variable_declaration
      (identifier)
      (user_type
        (identifier)))
    (getter
      (function_body
        (number_literal))))
  (function_declaration
    (modifiers
      (context_parameters
        (parameter_modifiers
          (annotation
            (user_type
              (identifier))))
        (parameter
          (identifier)
          (user_type
            (identifier)))
        (user_type
          (type_modifiers
            (annotation
              (user_type
                (identifier))))
          (identifier))))
    (identifier)
    (function_value_parameters)
    (function_body
      (identifier)))
  (function_declaration
    (modifiers
      (visibility_modifier)
      (context_parameters
        (parameter
          (identifier)
          (user_type
            (identifier))))
      (annotation
        (user_type
          (identifier)))
      (visibility_modifier))
    (identifier)
    (function_value_parameters)
    (function_body
      (number_literal)))
  (property_declaration
    (variable_declaration
      (identifier))
    (anonymous_function
      (context_parameters
        (parameter
          (identifier)
          (user_type
            (identifier))))
      (function_value_parameters)
      (function_body
        (block))))
  (function_declaration
    (identifier)
    (function_value_parameters
      (parameter
        (identifier)
        (function_type
          (context_parameters
            (user_type
              (identifier)))
          (function_type_parameters)
          (user_type
            (identifier))))
      (parameter
        (identifier)
        (function_type
          (type_modifiers)
          (context_parameters
            (user_type
              (identifier)))
          (function_type_parameters)
          (user_type
            (identifier))))
      (parameter
        (identifier)
        (function_type
          (type_modifiers
            (annotation
              (user_type
                (identifier))))
          (context_parameters
            (user_type
              (identifier)))
          (function_type_parameters)
          (user_type
            (identifier)))))
    (function_body
      (block
        (function_declaration
          (modifiers
            (context_parameters
              (parameter
                (identifier)
                (user_type
                  (identifier)))))
          (identifier)
          (function_value_parameters)
          (function_body
            (block)))))))

==============================
Context lists on class members
==============================

class A {
  context(Foo)
  fun f() {}
  context(Bar) private val x = 1

  private
  context(b: Bar)
  fun g() {}
}

interface I { context(Baz) suspend fun h() }

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (function_declaration
        (modifiers
          (context_parameters
            (user_type
              (identifier))))
        (identifier)
        (function_value_parameters)
        (function_body
          (block)))
      (property_declaration
        (modifiers
          (context_parameters
            (user_type
              (identifier)))
          (visibility_modifier))
        (variable_declaration
          (identifier))
        (number_literal))
      (function_declaration
        (modifiers
          (visibility_modifier)
          (context_parameters
            (parameter
              (identifier)
              (user_type
                (identifier)))))
        (identifier)
        (function_value_parameters)
        (function_body
          (block)))))
  (class_declaration
    (identifier)
    (class_body
      (function_declaration
        (modifiers
          (context_parameters
            (user_type
              (identifier)))
          (function_modifier))
        (identifier)
        (function_value_parameters)))))

==============================
Context as a name
==============================

fun f() {
  context(a) { b }
  val c = context.getString(1)
  context = 2
  context(a)
  val d = 1
  run {
    context(a)
    fun g() {}
  }
  context(a: A)
  fun h() {}
  class L {
    context(A)
    fun i() {}
  }
}

enum class E { context, b }
enum class F { a, context(1), @Anno context, b }

---

(source_file
  (function_declaration
    (identifier)
    (function_value_parameters)
    (function_body
      (block
        (call_expression
          (identifier)
          (value_arguments
            (value_argument
              (identifier)))
          (annotated_lambda
            (lambda_literal
              (identifier))))
        (property_declaration
          (variable_declaration
            (identifier))
          (call_expression
            (navigation_expression
              (identifier)
              (identifier))
            (value_arguments
              (value_argument
                (number_literal)))))
        (assignment
          (identifier)
          (number_literal))
        (call_expression
          (identifier)
          (value_arguments
            (value_argument
              (identifier))))
        (property_declaration
          (variable_declaration
            (identifier))
          (number_literal))
        (call_expression
          (identifier)
          (annotated_lambda
            (lambda_literal
              (call_expression
                (identifier)
                (value_arguments
                  (value_argument
                    (identifier))))
              (function_declaration
                (identifier)
                (function_value_parameters)
                (function_body
                  (block))))))
        (function_declaration
          (modifiers
            (context_parameters
              (parameter
                (identifier)
                (user_type
                  (identifier)))))
          (identifier)
          (function_value_parameters)
          (function_body
            (block)))
        (class_declaration
          (identifier)
          (class_body
            (function_declaration
              (modifiers
                (context_parameters
                  (user_type
                    (identifier))))
              (identifier)
              (function_value_parameters)
              (function_body
                (block))))))))
  (class_declaration
    (modifiers
      (class_modifier))
    (identifier)
    (enum_class_body
      (enum_entry
        (identifier))
      (enum_entry
        (identifier))))
  (class_declaration
    (modifiers
      (class_modifier))
    (identifier)
    (enum_class_body
      (enum_entry
        (identifier))
      (enum_entry
        (identifier)
        (value_arguments
          (value_argument
            (number_literal))))
      (enum_entry
        (modifiers
          (annotation
            (user_type
              (identifier))))
        (identifier))
      (enum_entry
        (identifier)))))

==============================
Unfinished annotation at the end of input
:error
==============================

val a
@B(x
---

==============================
Unfinished annotation after a typed property at the end of input
:error
==============================

val a: Int
@B
---

==============================
A hard keyword as a property name
:error
==============================

val class = 1
---

==============================
A hard keyword as a local property name
:error
==============================

fun f() {
  val fun = 2
}
---

==============================
An index expression without an index
:error
==============================

fun f() {
  a[]
}
---

================================================================================
Same-line class members
================================================================================

class Functions { fun a() {} fun b() {} }
class Initializer { init { f() } fun f() {} }
class Nested { class A {} interface I {} object O {} fun f() = 1 val x = 2 }
interface Contract { fun a(): Int fun b(): Int }
class Comments { fun f() = 1 /* boundary */ fun g() = 2 }
infix fun Int.fun_value(rhs: Int) = this + rhs
class Prefix { fun f() = 1 fun_value 2 }
class Separated { val x = 1; var y = 2; fun f() = x }

--------------------------------------------------------------------------------
